// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WatchStore Getting new props maps to different watch 1`] = `
<div>
  <p>
    item one
  </p>
</div>
`;

exports[`WatchStore Getting new props maps to different watch 2`] = `
<div>
  <p>
    item two
  </p>
</div>
`;

exports[`WatchStore Multiple mutations to store only cause one update 1`] = `
<div>
  <h1>
    Multiple Updates
  </h1>
  <p>
    No Updates
  </p>
</div>
`;

exports[`WatchStore Multiple mutations to store only cause one update 2`] = `
<div>
  <h1>
    Updated
  </h1>
  <p>
    One Update
  </p>
</div>
`;

exports[`WatchStore Mutating a watchable store causes a wrapped component to re-render 1`] = `
<p>
  Hello
</p>
`;

exports[`WatchStore Mutating a watchable store causes a wrapped component to re-render 2`] = `
<p>
  Delta Watch Render
</p>
`;

exports[`WatchStore Providing a mapStore function transforms props 1`] = `
<div>
  <p>
    item one
  </p>
</div>
`;

exports[`WatchStore Providing a mapStore function transforms props 2`] = `
<div>
  <p>
    item two
  </p>
</div>
`;
